# thorvg.benchmark

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: linux.yml
src/common/: benchmark_runner.hpp  benchmark_window.hpp  circle_generator.hpp  cli_parser.hpp  json_writer.hpp  rect_generator.hpp  rng.hpp  sdl_utils.hpp  stats.hpp  transform.hpp
src/skia/: circlebench_skia_sdl.cpp  imagebench_skia_sdl.cpp  lineargradientbench_skia_sdl.cpp  radialgradientbench_skia_sdl.cpp  rectbench_skia_sdl.cpp  skia_sdl_example.hpp  strokebench_skia_sdl.cpp  strokerectbench_skia_sdl.cpp
src/thorvg/: circlebench_thorvg_sdl.cpp  imagebench_thorvg_sdl.cpp  lineargradientbench_thorvg_sdl.cpp  radialgradientbench_thorvg_sdl.cpp  rectbench_thorvg_sdl.cpp  strokebench_thorvg_sdl.cpp  strokerectbench_thorvg_sdl.cpp  tvg_sdl_example.hpp
tools/: build_skia.sh  build_thorvg.sh  compare_stroke.py  generate_report.py  reconstruct_summary.py  repeat_seed.py  run_all.py  run_suite.sh
